<resources>
    <string name="app_name">WeatherApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="maria_welsch">Maria Welsch</string>
    <string name="las_vegas_nevada">Las Vegas, Nevada</string>
    <string name="nevada">Nevada</string>
    <string name="indonesia">Indonesia</string>
    <string name="jakarta_indonesia">Jakarta, Indonesia</string>
    <string name="add_location">Add Location</string>
</resources>